--- a/app/views/clients/index.html.erb
+++ b/app/views/clients/index.html.erb
@@ -1,12 +1,12 @@
-<p id="notice"><%= notice %></p>
+<%= snackbar_notifications(notice, alert).html_safe %>
 
-<h1>Clients</h1>
+<h1 class="<%= get_style_classes('h1-title')%>" >Clients</h1>
 
-<table>
+<table class="mdl-data-table mdl-js-data-table mdl-shadow--2dp">
   <thead>
     <tr>
-      <th>Name</th>
-      <th colspan="3"></th>
+      <th class="mdl-data-table__cell--non-numeric">Name</th>
+      <th class="mdl-data-table__cell--non-numeric" colspan="3"></th>
     </tr>
   </thead>
 
@@ -14,9 +14,9 @@
     <% @clients.each do |client| %>
       <tr>
         <td><%= client.name %></td>
-        <td><%= link_to 'Show', client %></td>
-        <td><%= link_to 'Edit', edit_client_path(client) %></td>
-        <td><%= link_to 'Destroy', client, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        <td><%= link_to 'Show', client, class:get_style_classes('btn-show') %></td>
+        <td><%= link_to 'Edit', edit_client_path(client), class:get_style_classes('btn-edit') %></td>
+        <td><%= link_to 'Destroy', client, method: :delete, data: { confirm: 'Are you sure?' }, class:get_style_classes('btn-destroy') %></td>
       </tr>
     <% end %>
   </tbody>
@@ -24,4 +24,4 @@
 
 <br>
 
-<%= link_to 'New Client', new_client_path %>
+<%= link_to 'New Client', new_client_path, class:get_style_classes('btn-new') %>
