--- a/app/views/senders/_edit_form.html.erb
+++ b/app/views/senders/_edit_form.html.erb
@@ -11,31 +11,35 @@
     </div>
   <% end %>
 
-  <div class="field">
-    <%= form.label :email %>
-    <%= form.text_field :email, id: :sender_email %>
+  <div class="field <%= get_style_classes('form-input-div') %>">
+    <%= form.label :email, class: get_style_classes('form-label-text-input') %>
+    <%= form.text_field :email, id: :sender_email, class: get_style_classes('form-text-input') %>
   </div>
+  <br />
 
   <% if sender.persisted? %>
-    <div class="field">
-      <%= form.label :old_password %>
-      <%= form.password_field :old_password, id: :old_password %>
+    <div class="field <%= get_style_classes('form-input-div') %>">
+      <%= form.label :old_password, class: get_style_classes('form-label-text-input') %>
+      <%= form.password_field :old_password, id: :old_password, class: get_style_classes('form-text-input') %>
     </div>
+    <br />
   <% end %>
 
-  <div class="field">
-    <%= form.label :new_password %>
-    <%= form.password_field :new_password, id: :new_password %>
+  <div class="field <%= get_style_classes('form-input-div') %>">
+    <%= form.label :new_password, class: get_style_classes('form-label-text-input') %>
+    <%= form.password_field :new_password, id: :new_password, class: get_style_classes('form-text-input') %>
   </div>
+  <br />
 
   <% if sender.persisted? %>
-    <div class="field">
-      <%= form.label :confirm_password %>
-      <%= form.password_field :confirm_password, id: :confirm_password %>
+    <div class="field <%= get_style_classes('form-input-div') %>">
+      <%= form.label :confirm_password, class: get_style_classes('form-label-text-input') %>
+      <%= form.password_field :confirm_password, id: :confirm_password, class: get_style_classes('form-text-input')  %>
     </div>
+    <br />
   <% end %>
 
   <div class="actions">
-    <%= form.submit %>
+    <%= form.submit class: get_style_classes('form-submit') %>
   </div>
 <% end %>
