--- a/app/views/templates/index.html.erb
+++ b/app/views/templates/index.html.erb
@@ -1,12 +1,11 @@
-<p id="notice"><%= notice %></p>
+<%= snackbar_notifications(notice, alert).html_safe %>
 
-<h1>Templates</h1>
+<h1 class="<%= get_style_classes('h1-title')%>" >Templates</h1>
 
-<table>
+<table class="mdl-data-table mdl-js-data-table mdl-shadow--2dp">
   <thead>
     <tr>
       <th>Title</th>
-      <th>Body</th>
       <th>Sender</th>
       <th colspan="3"></th>
     </tr>
@@ -16,11 +15,10 @@
     <% @templates.each do |template| %>
       <tr>
         <td><%= template.title %></td>
-        <td><%= template.body %></td>
         <td><%= template.sender.email %></td>
-        <td><%= link_to 'Show', template %></td>
-        <td><%= link_to 'Edit', edit_template_path(template) %></td>
-        <td><%= link_to 'Destroy', template, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        <td><%= link_to 'Show', template, class:get_style_classes('btn-show') %></td>
+        <td><%= link_to 'Edit', edit_template_path(template), class:get_style_classes('btn-edit') %></td>
+        <td><%= link_to 'Destroy', template, method: :delete, data: { confirm: 'Are you sure?' }, class: get_style_classes('btn-destroy') %></td>
       </tr>
     <% end %>
   </tbody>
@@ -28,4 +26,4 @@
 
 <br>
 
-<%= link_to 'New Template', new_template_path %>
+<%= link_to 'New Template', new_template_path, class:get_style_classes('btn-new') %>
