Mudei para Logged as

--- a/app/views/shared/_menu.html.erb
+++ b/app/views/shared/_menu.html.erb
@@ -12,7 +12,7 @@
           <input class="mdl-textfield__input" type="text" name="sample" id="fixed-header-drawer-exp">
         </div> -->
             <% if current_user %>
-                <b>Conectado como: </b>
+                <b>Logged as: </b>
                 <%= current_user.email %>
 
             <% end %>
