--- a/app/views/receivers/index.html.erb
+++ b/app/views/receivers/index.html.erb
@@ -13,7 +13,7 @@
   </thead>
 
   <tbody>
-    <% @receivers.each do |receiver| %>
+    <% @receivers.active.each do |receiver| %>
       <tr>
         <td><%= receiver.name %></td>
         <td><%= receiver.email %></td>
