Arruma a exibição de somente actives

--- a/app/views/groups/index.html.erb
+++ b/app/views/groups/index.html.erb
@@ -13,7 +13,7 @@
   </thead>
 
   <tbody>
-    <% @groups.active.each do |group| %>
+    <% @groups.each do |group| %>
       <tr>
         <td><%= group.name %></td>
         <td><%= group.private %></td>
